--- a/index.html
+++ b/index.html
@@ -1,26 +1,41 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
+    <link rel="stylesheet" href="style.css" />
     <title>Jas' Website</title>
   </head>
 
   <body>
     <!-- All content goes here -->
-     
+
     <div id="all-contents">
       <nav>
+        <h1>Jas' amazing website</h1>
+        <ul id="nav-ul">
+          <li class="nav-li"><a href="index.html">Home</a></li>
+          <li class="nav-li"><a href="portfolio.html">Portfolio</a></li>
+        </ul>
       </nav>
       <main>
-        <div class = "sidebar">
-
+        <div class="sidebar">
+          <img
+            class="sidebar-img"
+            src="project-instructions/img/IMG_3888.jpg"
+          />
         </div>
-        <div class = "content">
+        <div class="content">
           <h2>Jas Kennedy</h2>
           <p>Student at Lavca Virtual Charter Academy</p>
+          <div id="interests">
+            <h3>Interests</h3>
+            <ul>
+              <li>Video games</li>
+              <li>Drumming</li>
+              <li>Golfing</li>
+            </ul>
+          </div>
         </div>
-
       </main>
-    
     </div>
   </body>
 </html>
