--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <link rel="stylesheet" href="style.css" />
     <title>Jas' Website</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
 
   <body>
@@ -15,6 +15,7 @@
         <ul id="nav-ul">
           <li class="nav-li"><a href="index.html">Home</a></li>
           <li class="nav-li"><a href="portfolio.html">Portfolio</a></li>
+          <li class="nav-li"><a href="playground.html">Playground</a></li>
         </ul>
       </nav>
       <main>
