--- a/portfolio.html
+++ b/portfolio.html
@@ -1,23 +1,25 @@
 <!doctype html>
 <html>
   <head>
-    <link rel="stylesheet" href="style.css" />
-    <title>Jas' Website</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styleplay.css" />
+    <title>Jas' Portfolio</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
 
   <body>
     <!-- All content goes here -->
     <div id="all-contents">
       <nav>
-        <h1>Jas' Website</h1>
-        <ul id="nav-ul"></ul>
-        <li class="nav-li">
-          <a href="index.html">Home</a>
-        </li>
-        <li class="nav-li">
-          <a href="portfolio.html">Portfolio</a>
-        </li>
+        <h1>Jas' Portfolio</h1>
+        <ul id="nav-ul">
+          <li class="nav-li">
+            <a href="index.html">Home</a>
+          </li>
+          <li class="nav-li">
+            <a href="portfolio.html">Portfolio</a>
+          </li>
+          <li class="nav-li"><a href="playground.html">Playground</a></li>
+        </ul>
       </nav>
       <main>
         <div class="content">
